--- a/src/os/tsconfig.json
+++ b/src/os/tsconfig.json
@@ -1,23 +1,21 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "ESNext",
-    "lib": ["ES2023", "DOM"],
+    "target": "ES2020",
+    "module": "None",
+    "lib": ["ES2020", "DOM"],
     "outDir": "../../build/js",
     "rootDir": "./",
-    "strict": true,
-    "exactOptionalPropertyTypes": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedIndexedAccess": true,
-    "noImplicitOverride": true,
-    "useDefineForClassFields": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
+    "strict": false,
+    "noLib": false,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "bundler",
     "noEmit": false,
+    "downlevelIteration": true,
+    "noEmitHelpers": true,
+    "importHelpers": false,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": false,
+    "useDefineForClassFields": true,
     "declaration": false,
     "sourceMap": true,
     "inlineSourceMap": false,
