--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "scripts": {
     "info": "echo \"JSOS - JavaScript Operating System\" && echo \"====================================\" && echo \"\" && echo \"Available commands:\" && echo \"  npm run build           - Build the OS ISO\" && echo \"  npm run test            - Test in QEMU (automated)\" && echo \"  npm run test:interactive - Test in QEMU (interactive)\" && echo \"  npm run dev             - Build and test (development)\" && echo \"  npm run clean           - Clean build artifacts\" && echo \"  npm run docker:build    - Build Docker images\" && echo \"\" && echo \"Requirements: Docker and npm\"",
     "build": "docker build -f docker/build.Dockerfile -t jsos-build . && docker create --name temp-jsos jsos-build /bin/true && docker cp temp-jsos:/jsos.iso build/jsos.iso && docker rm temp-jsos",
-    "build:local": "npm run build:ts && echo \"TypeScript build complete\"",
-    "build:ts": "npm run transpile && npm run bundle",
+    "build:local": "npm run build:ts && npm run embed:js && echo \"TypeScript build complete\"",
+    "build:ts": "npm run bundle",
     "transpile": "tsc -p src/os/tsconfig.json",
-    "bundle": "node scripts/bundle-es5.js",
+    "bundle": "node scripts/bundle-hybrid.js",
+    "embed:js": "bash scripts/embed-js.sh",
+    "bundle:esbuild": "node scripts/bundle-esbuild.js",
+    "bundle:legacy": "npm run transpile && node scripts/bundle-es5.js",
     "test": "docker-compose run --rm test",
     "test:interactive": "docker-compose run --rm test-interactive",
     "test:wsl": "wsl bash test-wsl.sh",
@@ -24,21 +27,28 @@
     "start": "npm run info"
   },
   "devDependencies": {
-    "typescript": "^5.6.0",
     "@babel/core": "^7.25.0",
-    "@babel/preset-env": "^7.25.0",
     "@babel/plugin-transform-class-properties": "^7.25.0",
     "@babel/plugin-transform-nullish-coalescing-operator": "^7.25.0",
     "@babel/plugin-transform-optional-chaining": "^7.25.0",
     "@babel/plugin-transform-private-methods": "^7.25.0",
     "@babel/plugin-transform-private-property-in-object": "^7.25.0",
+    "@babel/preset-env": "^7.25.0",
+    "@babel/preset-typescript": "^7.27.1",
     "esbuild": "^0.21.0",
-    "terser": "^5.31.0"
+    "terser": "^5.31.0",
+    "typescript": "^5.6.0"
   },
   "engines": {
     "node": ">=18.0.0"
   },
-  "keywords": ["operating-system", "typescript", "bare-metal", "duktape", "javascript"],
+  "keywords": [
+    "operating-system",
+    "typescript",
+    "bare-metal",
+    "duktape",
+    "javascript"
+  ],
   "author": "JSOS Developer",
   "license": "MIT"
 }
