--- a/src/os/tsconfig.json
+++ b/src/os/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "None",
+    "module": "ESNext",
+    "moduleResolution": "node",
     "lib": ["ES2020", "DOM"],
     "outDir": "../../build/js",
     "rootDir": "./",
