--- a/iso/grub.cfg
+++ b/iso/grub.cfg
@@ -2,5 +2,9 @@ set timeout=0
 set default=0
 
 menuentry "JSOS" {
-	multiboot /boot/jsos.bin
+    set root=(cd)
+    echo "Loading kernel..."
+    multiboot /boot/jsos.bin
+    echo "Kernel loaded, booting..."
+    boot
 }
