Refactor TypeScript configuration and implement JSOS core functionality
- Changed TypeScript target from ES2020 to ES5 and module from ESNext to CommonJS in tsconfig.json.
- Introduced a new file `jsos.ts` containing the implementation of the JSOS (JavaScript Operating System) namespace.
- Added core system functionalities including process management, memory management, file system operations, network operations, and a command line interface.
- Implemented various interfaces for system components such as ProcessDescriptor, MemoryRegion, SystemInfo, and more.
- Established a structured command registration and execution system within the CLI.
- Included a demo sequence to showcase system commands upon booting.

--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "start": "npm run info"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.0",
     "@babel/plugin-transform-class-properties": "^7.25.0",
     "@babel/plugin-transform-nullish-coalescing-operator": "^7.25.0",
     "@babel/plugin-transform-optional-chaining": "^7.25.0",
@@ -51,5 +50,10 @@
     "javascript"
   ],
   "author": "JSOS Developer",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@babel/core": "^7.28.4",
+    "@babel/generator": "^7.28.3",
+    "@babel/traverse": "^7.28.4"
+  }
 }
