--- a/src/os/tsconfig.json
+++ b/src/os/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "lib": ["ES2020", "DOM"],
+  "target": "ES5",
+  "module": "CommonJS",
+  "moduleResolution": "node",
+  "lib": ["ES5"],
     "outDir": "../../build/js",
     "rootDir": "./",
     "strict": false,
