feat: Implement JSOS Kernel API and Terminal Module
- Added kernel.ts with TypeScript declarations for the JSOS kernel API, including memory management, terminal operations, and system commands.
- Introduced repl.ts for an interactive JavaScript REPL, allowing users to evaluate JavaScript expressions directly in the terminal.
- Created shell.ts to implement a command-line shell with built-in commands for file management, system information, and JavaScript execution.
- Developed terminal.ts to provide high-level terminal abstractions over kernel VGA primitives, including color printing and input handling.

--- a/src/kernel/Makefile
+++ b/src/kernel/Makefile
@@ -1,11 +1,20 @@
 CC = i686-elf-gcc
-CFLAGS = -ffreestanding -O2 -Wall -Wextra -std=c99
-LDFLAGS = -ffreestanding -O2 -nostartfiles -lgcc -lc -lnosys
-DUKTAPE_DIR = /opt/duktape
+CFLAGS = -ffreestanding -O2 -Wall -Wextra -std=c11 -DCONFIG_VERSION=\"2025.09\"
+LDFLAGS = -ffreestanding -O2 -nostartfiles -lgcc -lc -lnosys -lm
+QUICKJS_DIR = /opt/quickjs
 
-SOURCES = boot.s crt0.s kernel.c duktape_binding.c terminal.c memory.c syscalls.c math_impl.c
+# QuickJS source files (compiled separately for different warning settings)
+QJS_SOURCES = $(QUICKJS_DIR)/quickjs.c $(QUICKJS_DIR)/libregexp.c \
+              $(QUICKJS_DIR)/libunicode.c $(QUICKJS_DIR)/cutils.c \
+              $(QUICKJS_DIR)/libbf.c
+
+SOURCES = boot.s crt0.s irq_asm.s kernel.c quickjs_binding.c terminal.c memory.c \
+          syscalls.c math_impl.c irq.c keyboard.c timer.c
 OBJECTS = $(SOURCES:.s=.o)
 OBJECTS := $(OBJECTS:.c=.o)
+
+# QuickJS objects (compiled with relaxed warnings)
+QJS_OBJECTS = $(notdir $(QJS_SOURCES:.c=.o))
 
 TARGET = jsos.bin
 
@@ -13,16 +22,23 @@ TARGET = jsos.bin
 
 all: $(TARGET)
 
-$(TARGET): $(OBJECTS)
-	$(CC) -T linker.ld -o $@ $(LDFLAGS) $^ $(DUKTAPE_DIR)/src/duktape.c
+# Link everything together
+$(TARGET): $(OBJECTS) $(QJS_OBJECTS)
+	$(CC) -T linker.ld -o $@ $(LDFLAGS) $^
 
+# Compile our kernel sources
 %.o: %.c
-	$(CC) $(CFLAGS) -I$(DUKTAPE_DIR)/src -c $< -o $@
+	$(CC) $(CFLAGS) -I$(QUICKJS_DIR) -c $< -o $@
+
+# Compile QuickJS sources with relaxed warnings
+$(QJS_OBJECTS): $(QJS_SOURCES)
+	$(CC) -ffreestanding -O2 -std=c11 -DCONFIG_VERSION=\"2025.09\" \
+	  -w -I$(QUICKJS_DIR) -c $(QUICKJS_DIR)/$(patsubst %.o,%.c,$@) -o $@
 
 %.o: %.s
 	nasm -felf32 $< -o $@
 
 clean:
-	rm -f $(OBJECTS) $(TARGET)
+	rm -f $(OBJECTS) $(QJS_OBJECTS) $(TARGET)
 
 .DEFAULT_GOAL := all
