Refactor terminal handling and introduce platform abstraction
- Replaced terminal functions with platform-specific implementations in platform.c and platform.h.
- Removed terminal.c and terminal.h files to streamline the codebase.
- Updated syscalls.c to use platform_boot_print instead of terminal_writestring for system exit messages.
- Introduced a minimal VGA text-mode hardware abstraction layer to manage direct interactions with the VGA buffer and cursor.

--- a/src/kernel/Makefile
+++ b/src/kernel/Makefile
@@ -8,7 +8,7 @@ QJS_SOURCES = $(QUICKJS_DIR)/quickjs.c $(QUICKJS_DIR)/libregexp.c \
               $(QUICKJS_DIR)/libunicode.c $(QUICKJS_DIR)/cutils.c \
               $(QUICKJS_DIR)/dtoa.c
 
-SOURCES = boot.s crt0.s irq_asm.s kernel.c quickjs_binding.c terminal.c memory.c \
+SOURCES = boot.s crt0.s irq_asm.s kernel.c quickjs_binding.c platform.c memory.c \
           syscalls.c math_impl.c irq.c keyboard.c timer.c
 OBJECTS = $(SOURCES:.s=.o)
 OBJECTS := $(OBJECTS:.c=.o)
