Update README to match new behavior and QuickJS API

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "operating-system",
     "typescript",
     "bare-metal",
-    "duktape",
+    "quickjs",
     "javascript"
   ],
   "author": "JSOS Developer",
