--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "test:interactive": "docker-compose run --rm test-interactive",
     "test:wsl": "wsl bash test-wsl.sh",
     "test:windows": "powershell -ExecutionPolicy Bypass -File test-windows.ps1",
+    "test:auto": "powershell -ExecutionPolicy Bypass -File test-windows.ps1 -Headless",
+    "test:gui": "powershell -ExecutionPolicy Bypass -File test-windows.ps1",
     "install:qemu": "powershell -ExecutionPolicy Bypass -File test-windows.ps1 -Install",
     "dev": "npm run build && npm run test",
     "clean": "docker-compose down -v && npm run clean:local",
