feat: Replace embed-js.sh with embed-js.js for embedding JavaScript into C header

--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "build:ts": "npm run bundle",
     "transpile": "tsc -p src/os/tsconfig.json",
     "bundle": "node scripts/bundle-hybrid.js",
-    "embed:js": "bash scripts/embed-js.sh",
-    "bundle:esbuild": "node scripts/bundle-esbuild.js",
-    "bundle:legacy": "npm run transpile && node scripts/bundle-es5.js",
+    "embed:js": "node scripts/embed-js.js",
     "test": "docker-compose run --rm test",
     "test:interactive": "docker-compose run --rm test-interactive",
     "test:wsl": "wsl bash test-wsl.sh",
