Implement ATA PIO Mode Driver and FAT16 Filesystem
- Added `ata.c` and `ata.h` for the ATA PIO mode driver, enabling raw sector read/write for the primary ATA controller.
- Introduced `block.ts` to provide a block device abstraction layer with a 64-sector LRU write-back cache.
- Implemented a full FAT16 filesystem in `fat16.ts`, supporting read/write operations and directory management.
- Updated `test-windows.ps1` to include disk image and boot options for testing.

--- a/src/kernel/Makefile
+++ b/src/kernel/Makefile
@@ -9,7 +9,7 @@ QJS_SOURCES = $(QUICKJS_DIR)/quickjs.c $(QUICKJS_DIR)/libregexp.c \
               $(QUICKJS_DIR)/dtoa.c
 
 SOURCES = boot.s crt0.s irq_asm.s kernel.c quickjs_binding.c platform.c memory.c \
-          syscalls.c math_impl.c irq.c keyboard.c timer.c
+          syscalls.c math_impl.c irq.c keyboard.c timer.c ata.c
 OBJECTS = $(SOURCES:.s=.o)
 OBJECTS := $(OBJECTS:.c=.o)
 
