--- a/src/kernel/Makefile
+++ b/src/kernel/Makefile
@@ -9,7 +9,8 @@ QJS_SOURCES = $(QUICKJS_DIR)/quickjs.c $(QUICKJS_DIR)/libregexp.c \
               $(QUICKJS_DIR)/dtoa.c
 
 SOURCES = boot.s crt0.s irq_asm.s kernel.c quickjs_binding.c platform.c memory.c \
-          syscalls.c math_impl.c irq.c keyboard.c mouse.c timer.c ata.c
+          syscalls.c math_impl.c irq.c keyboard.c mouse.c timer.c ata.c \
+          pci.c virtio_net.c
 OBJECTS = $(SOURCES:.s=.o)
 OBJECTS := $(OBJECTS:.c=.o)
 
