Add USB HID, Mass Storage, VirtIO drivers, Watchdog timer, and WiFi stub
- Implement USB HID driver for keyboard and mouse, including report parsing and event handling.
- Add USB Mass Storage Class (MSC) driver stub for handling USB storage devices.
- Introduce VirtIO block device driver for legacy PCI devices, supporting synchronous read/write operations.
- Implement VirtIO GPU driver for legacy PCI devices, managing control and cursor queues for GPU commands.
- Add kernel watchdog timer to monitor system responsiveness and trigger panic on timeout.
- Include a stub for WiFi driver, providing an API surface for future implementation of WiFi support.

--- a/iso/grub.cfg
+++ b/iso/grub.cfg
@@ -1,8 +1,44 @@
+# JSOS GRUB2 configuration
+# Items 15 and 16: boot timeout countdown + multiple kernel options
+
 set default=0
-set timeout=0
+set timeout=3          # Item 15: 3-second countdown shown before default boots
 set gfxpayload=1024x768x32
 
-menuentry "JSOS" {
-	multiboot2 /boot/jsos.bin
-	boot
+# Item 14: Boot splash — GRUB graphical terminal with background (items 14)
+# Background art can be added at /boot/grub/jsos-splash.png when ISO is rebuilt.
+# loadfont /boot/grub/fonts/unicode.pf2
+# background_image /boot/grub/jsos-splash.png
+set gfxterm_font=unicode
+
+# Item 16: Multiple GRUB menu entries
+menuentry "JSOS (standard)" {
+    multiboot2 /boot/jsos.bin
+    boot
 }
+
+menuentry "JSOS (selftest)" {
+    multiboot2 /boot/jsos.bin --selftest
+    boot
+}
+
+menuentry "JSOS (verbose debug)" {
+    multiboot2 /boot/jsos.bin --log=debug
+    boot
+}
+
+menuentry "JSOS (safe mode - no JIT)" {
+    multiboot2 /boot/jsos.bin --no-jit --log=verbose
+    boot
+}
+
+# Item 17: PXE/netboot — GRUB can chain-load iPXE or use built-in pxe module
+# Uncomment and set server IP to enable PXE boot:
+# menuentry "JSOS (netboot via PXE)" {
+#     if pxe; then
+#         pxe_default_server 192.168.1.1
+#         pxe_tftp /jsos/jsos.bin
+#     else
+#         echo "PXE not available; use UEFI network boot"
+#     fi
+# }
