--- a/src/kernel/Makefile
+++ b/src/kernel/Makefile
@@ -10,7 +10,15 @@ QJS_SOURCES = $(QUICKJS_DIR)/quickjs.c $(QUICKJS_DIR)/libregexp.c \
 
 SOURCES = boot.s crt0.s irq_asm.s kernel.c quickjs_binding.c platform.c memory.c \
           syscalls.c math_impl.c irq.c keyboard.c mouse.c timer.c ata.c \
-          pci.c virtio_net.c jit.c
+          pci.c virtio_net.c jit.c \
+          cpuid.c cmdline.c acpi.c \
+          e1000.c rtl8139.c usb.c \
+          watchdog.c symtab.c kaslr.c \
+          hpet.c virtio_blk.c virtio_gpu.c \
+          apic.c nvme.c ahci.c selftest.c kprobes.c keyboard_layout.c \
+          usb_hid.c gamepad.c multimon.c sd.c usb_msc.c floppy.c \
+          cdc_ecm.c wifi.c pci_hotplug.c \
+          secboot.c pxe.c
 OBJECTS = $(SOURCES:.s=.o)
 OBJECTS := $(OBJECTS:.c=.o)
 
